# lacrei_saude

./: .flake8  Dockerfile  README.md  docker-compose.yml  lacrei_saude.postman_collection.json  pyproject.toml
.github/workflows/: ci-cd.yml
app/: settings.py  urls.py
healthcare_workers/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
healthcare_workers/migrations/: 0001_initial.py
medical_consultation/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
medical_consultation/migrations/: 0001_initial.py
